addons/prometheus-operator/monitoring-stack/resources/alertmanager/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager
  namespace: PROMETHEUS_OPERATOR_NAMESPACE
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 9093
      protocol: TCP
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 9094
      protocol: TCP
    - port: 9094
      protocol: UDP
